--- a/index.qmd
+++ b/index.qmd
@@ -2,59 +2,55 @@
 title: "Creating the World: Grafik, Design & Animation (inkl. Einführung in die 3D Modelierung mit Blender"
 ---
 
-
-
-
+## ![](icons/Logo.png)
 
 ## Lorem
 
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
 
-
-:::{.exercisebox}
-
-::::{.exercisebox-header}
-:::::{.exercisebox-icon}
-:::::
-Übung 
-::::
-
-::::{.exercisebox-body}
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-::::
-
+::: exercisebox
+::: exercisebox-header
+::: exercisebox-icon
 :::
 
+Übung
+:::
 
+::: exercisebox-body
+Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+:::
+:::
 
 ## Lorem ipsum dolor
 
+::: tippbox
+::: tippbox-header
+::: tippbox-icon
+:::
 
-:::{.tippbox} 
-
-::::{.tippbox-header} 
-:::::{.tippbox-icon} 
-:::::
 Weiterführende Informationen
-:::: 
-::::{.tippbox-body}
+:::
+
+::: tippbox-body
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-:::: 
+:::
 :::
 
 ## Lorem ipsum dolor
+
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
 
-:::{.rememberbox} 
+::: rememberbox
+::: rememberbox-header
+::: rememberbox-icon
+:::
 
-::::{.rememberbox-header}
-:::::{.rememberbox-icon} 
-:::::
 Merke...
-:::: 
-::::{.rememberbox-body}
+:::
+
+::: rememberbox-body
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-:::: 
+:::
 :::
 
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
