Add short text in index and about

--- a/Sites/Overview.qmd
+++ b/Sites/Overview.qmd
@@ -3,6 +3,8 @@ title: "Kursübersicht"
 editor: visual
 ---
 
+![](/icons/Logo.png)
+
 ## Semesterplan
 
 +-------+-------------------------------------------+-------------------------------------------------------------------------------------+--------------------------------------+----------------------------+-----------+--------+
