--- a/index.qmd
+++ b/index.qmd
@@ -1,56 +1,9 @@
 ---
-title: "Creating the World: Grafik, Design & Animation (inkl. Einführung in die 3D Modelierung mit Blender"
+title: "Creating the World: Grafik, Design & Animation (inkl. Einführung in die 3D Modelierung mit Blender)"
 ---
 
-## ![](icons/Logo.png)
+## Diese Website befindet sich im Aufbau...
 
-## Lorem
+Auf dieser Website werden die Lenrmaterialien der Lehrveranstaltung "Creating the World: Grafik, Design & Animation (inkl. Einführung in die 3D Modelierung mit Blender) als Open Education Ressource aufbereitet.
 
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-
-::: exercisebox
-::: exercisebox-header
-::: exercisebox-icon
-:::
-
-Übung
-:::
-
-::: exercisebox-body
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-:::
-:::
-
-## Lorem ipsum dolor
-
-::: tippbox
-::: tippbox-header
-::: tippbox-icon
-:::
-
-Weiterführende Informationen
-:::
-
-::: tippbox-body
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-:::
-:::
-
-## Lorem ipsum dolor
-
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
-
-::: rememberbox
-::: rememberbox-header
-::: rememberbox-icon
-:::
-
-Merke...
-:::
-
-::: rememberbox-body
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-:::
-:::
-
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
+Weitere Informationen hierzu folgen...
