some final modifications
folder 11_Character deleted, verified that folder to corresponding chapters linked are, chapter overview update of chapters

--- a/about.qmd
+++ b/about.qmd
@@ -24,7 +24,7 @@ Diese Website stellt eine offene Bildungsressource (Open Education Ressource) da
 
 ## Danksagung
 
-Besonderer Dank geht an Rahel Steuri und Rebekka Bohrer, welche bei der Adaption des Kurses im Jahre 2022 beteiligt waren. Weiterer Dank geht an Auregane Devaud, welche die Erstellung dieser Website unterstützt hat.
+Besonderer Dank geht an Rahel Steuri und Rebekka Bohrer, welche bei der Adaption des Kurses im Jahre 2022 beteiligt waren. Weiterer Dank geht an Aurégane Dévaud, welche die Erstellung dieser Website unterstützt hat.
 
 ## Kontakt:
 
